--- a/versions/kaishield/0.0.1/values.yaml
+++ b/versions/kaishield/0.0.1/values.yaml
@@ -18,7 +18,7 @@ controllerManager:
   replicaCount: 3
 
   image:
-    tag: "0.0.1"
+    tag: "v0.0.1"
     registry: ghcr.io
     pullPolicy: IfNotPresent
     repository: traas-stack/kaishield
